Updates to table size and styles for colour

--- a/packages/storybook-html/src/components/core/colour-apply.story.mdx
+++ b/packages/storybook-html/src/components/core/colour-apply.story.mdx
@@ -29,7 +29,7 @@ UQ purple should be the only accent colour on a screen. It is already incorporat
 The purple gradient is already incorporated in the header, footer and other components. It should not be used elsewhere in user interfaces without consultation. 
 
 
-<table class="uqds-table">
+<table class="uqds-table uqds-table--card uqds-table--colour">
 <tbody class="uqds-table__body">
   <tr class="uqds-table__mobile-heading">
     <th class="uqds-table__heading">Example</th>
@@ -70,7 +70,7 @@ Note the centre point at 87%.
 
 Icons should generally be the same colour as any adjacent text
 
-<table class="uqds-table">
+<table class="uqds-table  uqds-table--card uqds-table--colour">
 <tbody class="uqds-table__body">
   <tr class="uqds-table__mobile-heading">
     <th class="uqds-table__heading">Example</th>
@@ -136,7 +136,7 @@ Icons should generally be the same colour as any adjacent text
 
 # Links and buttons
 
-  <table class="uqds-table">
+  <table class="uqds-table  uqds-table--card uqds-table--colour">
   <tbody class="uqds-table__body">
     <tr class="uqds-table__mobile-heading">
       <th class="uqds-table__heading">Example</th>
@@ -180,7 +180,7 @@ See for example: Sections, Cards, Table -- *add links eventually*
 
 These can be used with dark and purple text.
 
-<table class="uqds-table">
+<table class="uqds-table  uqds-table--card  uqds-table--colour">
 <tbody class="uqds-table__body">
   <tr class="uqds-table__mobile-heading">
     <th class="uqds-table__heading">Example</th>
@@ -214,7 +214,7 @@ These can be used with dark and purple text.
 
 These can be used with white text.
 
-<table class="uqds-table">
+<table class="uqds-table  uqds-table--card uqds-table--colour">
 <tbody class="uqds-table__body">
   <tr class="uqds-table__mobile-heading">
     <th class="uqds-table__heading">Example</th>
@@ -245,7 +245,7 @@ These colours can only be used for components which alert a user or display a st
 
 These can be used as background colours to default text, e.g. alerts.
 
-<table class="uqds-table">
+<table class="uqds-table  uqds-table--card uqds-table--colour">
 <tbody class="uqds-table__body">
   <tr class="uqds-table__mobile-heading">
     <th class="uqds-table__heading">Example</th>
@@ -290,7 +290,7 @@ These can be used as background colours to default text, e.g. alerts.
 
 These can be used on a white background or as background colours to white text, e.g. form validation errors.
 
-<table class="uqds-table">
+<table class="uqds-table  uqds-table--card uqds-table--colour">
 <tbody class="uqds-table__body">
   <tr class="uqds-table__mobile-heading">
     <th class="uqds-table__heading">Example</th>
@@ -314,9 +314,9 @@ These can be used on a white background or as background colours to white text, 
     <td class="uqds-table__item" data-title="Usage:">Warning; there <em>may</em> be a problem</td>
   </tr>
   <tr  class="uqds-table__row">
-    <td class="uqds-table__item"><div class="uqds-colour__palette uqds-red-dark20"></div></td>
+    <td class="uqds-table__item"><div class="uqds-colour__palette uqds-red-dark40"></div></td>
     <td class="uqds-table__item" data-title="Name:">UQ Red Dark 40</td>
-    <td class="uqds-table__item" data-title="Variable:"><code>$uq-red-dark20</code></td>
+    <td class="uqds-table__item" data-title="Variable:"><code>$uq-red-dark40</code></td>
     <td class="uqds-table__item" data-title="HEX:">#9b1129</td>
     <td class="uqds-table__item" data-title="Usage:">Error, unavailable; there <em>is</em> a problem</td>
   </tr>
@@ -332,7 +332,7 @@ These can be used on a white background or as background colours to white text, 
 
 # Borders
 
-<table class="uqds-table">
+<table class="uqds-table  uqds-table--card uqds-table--colour">
 <tbody class="uqds-table__body">
   <tr class="uqds-table__mobile-heading">
     <th class="uqds-table__heading">Example</th>
