--- a/packages/storybook-html/src/components/core/colour-base.story.mdx
+++ b/packages/storybook-html/src/components/core/colour-base.story.mdx
@@ -24,7 +24,7 @@ These are the core brand colours for the University of Queensland. Refer to the 
 
 ### Primary colours
 
-<table class="uqds-table">
+<table class="uqds-table  uqds-table--card uqds-table--colour">
   <tbody class="uqds-table__body">
     <tr class="uqds-table__mobile-heading">
       <th class="uqds-table__heading">Example</th>
@@ -61,7 +61,7 @@ These are the core brand colours for the University of Queensland. Refer to the 
 
 These secondary colours should always play a supporting role to our primary colour palette. In user interfaces, the secondary are only used where additional colour is needed to present information (e.g. alerts, status, charts, diagrams).
 
-  <table class="uqds-table">
+  <table class="uqds-table uqds-table--card uqds-table--colour">
   <tbody class="uqds-table__body">
     <tr class="uqds-table__mobile-heading">
       <th class="uqds-table__heading">Example</th>
@@ -132,7 +132,7 @@ These secondary colours should always play a supporting role to our primary colo
 ### Neutral tones
 Neutral tones can be used as a background colour.
 
-<table class="uqds-table">
+<table class="uqds-table  uqds-table--card uqds-table--colour">
   <tbody class="uqds-table__body">
     <tr class="uqds-table__mobile-heading">
       <th class="uqds-table__heading">Example</th>
@@ -162,7 +162,7 @@ Neutral tones can be used as a background colour.
 
 ### Link
 
-  <table class="uqds-table">
+  <table class="uqds-table uqds-table--card uqds-table--colour">
   <tbody class="uqds-table__body">
     <tr class="uqds-table__mobile-heading">
       <th class="uqds-table__heading">Example</th>
