Fixed class name story

--- a/packages/storybook-html/src/components/core/space.story.mdx
+++ b/packages/storybook-html/src/components/core/space.story.mdx
@@ -29,84 +29,84 @@ Use this basic spacing scale when building individual components. It includes sm
     <td>0.25</td>
     <td><code>$space-xs</code></td>
     <td>Extra small</td>
-    <td><div class="uqds-space uqds-space-xs"></div></td>
+    <td><div className="uqds-space uqds-space-xs"></div></td>
   </tr>
   <tr>
     <td>8</td>
     <td>0.5</td>
     <td><code>$space-sm</code></td>
     <td>Small</td>
-    <td><div class="uqds-space uqds-space-sm"></div></td>
+    <td><div className="uqds-space uqds-space-sm"></div></td>
   </tr>
   <tr>
     <td>16</td>
     <td>1</td>
     <td><code>$space</code></td>
     <td>Default space</td>
-    <td><div class="uqds-space"></div></td>
+    <td><div className="uqds-space"></div></td>
   </tr>
   <tr>
     <td>24</td>
     <td>1.5</td>
     <td><code>$space-md</code></td>
     <td>Medium</td>
-    <td><div class="uqds-space uqds-space-md"></div></td>
+    <td><div className="uqds-space uqds-space-md"></div></td>
   </tr>
   <tr>
     <td>32</td>
     <td>2</td>
     <td><code>$space-lg</code></td>
     <td>Large</td>
-    <td><div class="uqds-space uqds-space-lg"></div></td>
+    <td><div className="uqds-space uqds-space-lg"></div></td>
   </tr>
   <tr>
     <td>40</td>
     <td>2.5</td>
     <td><code>$space-xl</code></td>
     <td>Extra large</td>
-    <td><div class="uqds-space uqds-space-xl"></div></td>
+    <td><div className="uqds-space uqds-space-xl"></div></td>
   </tr>
   <tr>
     <td>48</td>
     <td>3</td>
     <td><code>$space-xxl</code></td>
     <td>2x extra large</td>
-    <td><div class="uqds-space uqds-space-xxl"></div></td>
+    <td><div className="uqds-space uqds-space-xxl"></div></td>
   </tr>
   <tr>
     <td>56</td>
     <td>35</td>
     <td><code>$space-xxxl</code></td>
     <td>3x extra large</td>
-    <td><div class="uqds-space uqds-space-xxxl"></div></td>
+    <td><div className="uqds-space uqds-space-xxxl"></div></td>
   </tr>
   <tr>
     <td>64</td>
     <td>4</td>
     <td><code>$space-xxxxl</code></td>
     <td>4x extra large</td>
-    <td><div class="uqds-space uqds-space-xxxxl"></div></td>
+    <td><div className="uqds-space uqds-space-xxxxl"></div></td>
   </tr>
   <tr>
     <td>72</td>
     <td>4.5</td>
     <td><code>$space-ul</code></td>
     <td>Ultra large</td>
-    <td><div class="uqds-space uqds-space-ul"></div></td>
+    <td><div className="uqds-space uqds-space-ul"></div></td>
   </tr>
   <tr>
     <td>80</td>
     <td>5</td>
     <td><code>$space-uul</code></td>
     <td>2x ultra large</td>
-    <td><div class="uqds-space uqds-space-uul"></div></td>
+    <td><div className="uqds-space uqds-space-uul"></div></td>
   </tr>
   <tr>
     <td>88</td>
     <td>5.5</td>
     <td><code>$space-uuul</code></td>
     <td>3x ultra large</td>
-    <td><div class="uqds-space uqds-space-uuul"></div></td>
+    <td><div className="uqds-space uqds-space-uuul"></div></td>
   </tr>
   </table>
 
@@ -135,42 +135,42 @@ Use this layout scale for arranging components and other UI parts into a full pa
     <td>16</td>
     <td><code>$space</code></td>
     <td>Default space</td>
-    <td><div class="uqds-space"></div></td>
+    <td><div className="uqds-space"></div></td>
   </tr>
   <tr>
     <td>24</td>
     <td>1.5</td>
     <td><code>$space-md</code></td>
     <td>Medium</td>
-    <td><div class="uqds-space uqds-space-md"></div></td>
+    <td><div className="uqds-space uqds-space-md"></div></td>
   </tr>
   <tr>
     <td>40</td>
     <td>2.5</td>
     <td><code>$space-xl</code></td>
     <td>Extra large</td>
-    <td><div class="uqds-space uqds-space-xl"></div></td>
+    <td><div className="uqds-space uqds-space-xl"></div></td>
   </tr>
   <tr>
     <td>64</td>
     <td>4</td>
     <td><code>$space-xxxxl</code></td>
     <td>4x extra large</td>
-    <td><div class="uqds-space uqds-space-xxxxl"></div></td>
+    <td><div className="uqds-space uqds-space-xxxxl"></div></td>
   </tr>
   <tr>
     <td>80</td>
     <td>5</td>
     <td><code>$space-uul</code></td>
     <td>2x ultra large</td>
-    <td><div class="uqds-space uqds-space-uul"></div></td>
+    <td><div className="uqds-space uqds-space-uul"></div></td>
   </tr>
     <tr>
     <td>160</td>
     <td>10</td>
     <td><code>$space-uuuul</code></td>
     <td>4x ultra large</td>
-    <td><div class="uqds-space uqds-space-uuuul"></div></td>
+    <td><div className="uqds-space uqds-space-uuuul"></div></td>
   </tr>
   </table>
 
@@ -193,7 +193,7 @@ Applies padding to containers
   </tr>
   <tr>
     <td>Container</td>
-    <td><div class="uqds-container uqds-container-space"><code>$space;</code></div></td>
+    <td><div className="uqds-container uqds-container-space"><code>$space;</code></div></td>
     <td>
       <code>padding:$space;</code>
       <ul>
@@ -204,7 +204,7 @@ Applies padding to containers
   </tr>
   <tr>
     <td>Container size</td>
-    <td><div class="uqds-container uqds-container-space-lg"><code>$space-lg;</code></div></td>
+    <td><div className="uqds-container uqds-container-space-lg"><code>$space-lg;</code></div></td>
     <td>
       <code>padding:$space-lg;</code>
       <ul>
@@ -215,7 +215,7 @@ Applies padding to containers
   </tr>
   <tr>
     <td>Compressed</td>
-    <td><div class="uqds-container uqds-compressed-space-lg"><code>$space-compressed-lg $space-lg;</code></div></td>
+    <td><div className="uqds-container uqds-compressed-space-lg"><code>$space-compressed-lg $space-lg;</code></div></td>
     <td>
       <code>paddding:$space-compressed-lg $space-lg;</code>
       <ul>
@@ -228,7 +228,7 @@ Applies padding to containers
   </tr>
   <tr>
     <td>Stretched</td>
-    <td><div class="uqds-container uqds-stretched-space"><code>$space-stretched $space;</code></div></td>
+    <td><div className="uqds-container uqds-stretched-space"><code>$space-stretched $space;</code></div></td>
     <td>
       <code>paddding:$space-stretched $space;</code>
       <ul>
@@ -256,11 +256,11 @@ Stacks content vertically, applying top margin.
   <tr>
     <td>Stacked</td>
     <td>
-      <div class="uqds-container">
-        <div class="uqds-stacked-space"><code>$space;</code></div>
-        <div class="uqds-stacked-space"><code>$space;</code></div>
-        <div class="uqds-stacked-space"><code>$space;</code></div>
-        <div class="uqds-stacked-space"><code>$space;</code></div>
+      <div className="uqds-container">
+        <div className="uqds-stacked-space"><code>$space;</code></div>
+        <div className="uqds-stacked-space"><code>$space;</code></div>
+        <div className="uqds-stacked-space"><code>$space;</code></div>
+        <div className="uqds-stacked-space"><code>$space;</code></div>
       </div>
     </td>
     <td>
@@ -274,11 +274,11 @@ Stacks content vertically, applying top margin.
   <tr>
     <td>Stacked extra small</td>
     <td>
-      <div class="uqds-container">
-        <div class="uqds-stacked-space-xs"><code>$space-xs;</code></div>
-        <div class="uqds-stacked-space-xs"><code>$space-xs;</code></div>
-        <div class="uqds-stacked-space-xs"><code>$space-xs;</code></div>
-        <div class="uqds-stacked-space-xs"><code>$space-xs;</code></div>
+      <div className="uqds-container">
+        <div className="uqds-stacked-space-xs"><code>$space-xs;</code></div>
+        <div className="uqds-stacked-space-xs"><code>$space-xs;</code></div>
+        <div className="uqds-stacked-space-xs"><code>$space-xs;</code></div>
+        <div className="uqds-stacked-space-xs"><code>$space-xs;</code></div>
       </div>
     </td>
     <td>
@@ -291,11 +291,11 @@ Stacks content vertically, applying top margin.
   <tr>
     <td>Stacked large</td>
     <td>
-      <div class="uqds-container">
-        <div class="uqds-stacked-space-lg"><code>$space-lg;</code></div>
-        <div class="uqds-stacked-space-lg"><code>$space-lg;</code></div>
-        <div class="uqds-stacked-space-lg"><code>$space-lg;</code></div>
-        <div class="uqds-stacked-space-lg"><code>$space-lg;</code></div>
+      <div className="uqds-container">
+        <div className="uqds-stacked-space-lg"><code>$space-lg;</code></div>
+        <div className="uqds-stacked-space-lg"><code>$space-lg;</code></div>
+        <div className="uqds-stacked-space-lg"><code>$space-lg;</code></div>
+        <div className="uqds-stacked-space-lg"><code>$space-lg;</code></div>
       </div>
     </td>
     <td>
@@ -321,11 +321,11 @@ Arrange objects inline horizontally, applying right margin.
   <tr>
     <td>Inline</td>
     <td>
-      <div class="uqds-container">
-        <div class="uqds-inline-space"><code>$space;</code></div>
-        <div class="uqds-inline-space"><code>$space;</code></div>
-        <div class="uqds-inline-space"><code>$space;</code></div>
-        <div class="uqds-inline-space"><code>$space;</code></div>
+      <div className="uqds-container">
+        <div className="uqds-inline-space"><code>$space;</code></div>
+        <div className="uqds-inline-space"><code>$space;</code></div>
+        <div className="uqds-inline-space"><code>$space;</code></div>
+        <div className="uqds-inline-space"><code>$space;</code></div>
       </div>
     </td>
     <td>
@@ -339,11 +339,11 @@ Arrange objects inline horizontally, applying right margin.
   <tr>
     <td>Inline extra small</td>
     <td>
-      <div class="uqds-container">
-        <div class="uqds-inline-space-xs"><code>$space-xs;</code></div>
-        <div class="uqds-inline-space-xs"><code>$space-xs;</code></div>
-        <div class="uqds-inline-space-xs"><code>$space-xs;</code></div>
-        <div class="uqds-inline-space-xs"><code>$space-xs;</code></div>
+      <div className="uqds-container">
+        <div className="uqds-inline-space-xs"><code>$space-xs;</code></div>
+        <div className="uqds-inline-space-xs"><code>$space-xs;</code></div>
+        <div className="uqds-inline-space-xs"><code>$space-xs;</code></div>
+        <div className="uqds-inline-space-xs"><code>$space-xs;</code></div>
       </div>
     </td>
     <td>
@@ -356,11 +356,11 @@ Arrange objects inline horizontally, applying right margin.
   <tr>
     <td>Inline large</td>
     <td>
-      <div class="uqds-container">
-        <div class="uqds-inline-space-lg"><code>$space-lg;</code></div>
-        <div class="uqds-inline-space-lg"><code>$space-lg;</code></div>
-        <div class="uqds-inline-space-lg"><code>$space-lg;</code></div>
-        <div class="uqds-inline-space-lg"><code>$space-lg;</code></div>
+      <div className="uqds-container">
+        <div className="uqds-inline-space-lg"><code>$space-lg;</code></div>
+        <div className="uqds-inline-space-lg"><code>$space-lg;</code></div>
+        <div className="uqds-inline-space-lg"><code>$space-lg;</code></div>
+        <div className="uqds-inline-space-lg"><code>$space-lg;</code></div>
       </div>
     </td>
     <td>
@@ -422,84 +422,84 @@ This chart provides a guide to multiples of 8.
     <td>0.25</td>
     <td><code>$space-xs</code></td>
     <td>Extra small</td>
-    <td><div class="uqds-space uqds-space-xs"></div></td>
+    <td><div className="uqds-space uqds-space-xs"></div></td>
   </tr>
   <tr>
     <td>8</td>
     <td>0.5</td>
     <td><code>$space-sm</code></td>
     <td>Small</td>
-    <td><div class="uqds-space uqds-space-sm"></div></td>
+    <td><div className="uqds-space uqds-space-sm"></div></td>
   </tr>
   <tr>
     <td>16</td>
     <td>1</td>
     <td><code>$space</code></td>
     <td>Default space</td>
-    <td><div class="uqds-space"></div></td>
+    <td><div className="uqds-space"></div></td>
   </tr>
   <tr>
     <td>24</td>
     <td>1.5</td>
     <td><code>$space-md</code></td>
     <td>Medium</td>
-    <td><div class="uqds-space uqds-space-md"></div></td>
+    <td><div className="uqds-space uqds-space-md"></div></td>
   </tr>
   <tr>
     <td>32</td>
     <td>2</td>
     <td><code>$space-lg</code></td>
     <td>Large</td>
-    <td><div class="uqds-space uqds-space-lg"></div></td>
+    <td><div className="uqds-space uqds-space-lg"></div></td>
   </tr>
   <tr>
     <td>40</td>
     <td>2.5</td>
     <td><code>$space-xl</code></td>
     <td>Extra large</td>
-    <td><div class="uqds-space uqds-space-xl"></div></td>
+    <td><div className="uqds-space uqds-space-xl"></div></td>
   </tr>
   <tr>
     <td>48</td>
     <td>3</td>
     <td><code>$space-xxl</code></td>
     <td>2x extra large</td>
-    <td><div class="uqds-space uqds-space-xxl"></div></td>
+    <td><div className="uqds-space uqds-space-xxl"></div></td>
   </tr>
   <tr>
     <td>56</td>
     <td>3.5</td>
     <td><code>$space-xxxl</code></td>
     <td>3x extra large</td>
-    <td><div class="uqds-space uqds-space-xxxl"></div></td>
+    <td><div className="uqds-space uqds-space-xxxl"></div></td>
   </tr>
   <tr>
     <td>64</td>
     <td>4</td>
     <td><code>$space-xxxxl</code></td>
     <td>4x extra large</td>
-    <td><div class="uqds-space uqds-space-xxxxl"></div></td>
+    <td><div className="uqds-space uqds-space-xxxxl"></div></td>
   </tr>
   <tr>
     <td>72</td>
     <td>4.5</td>
     <td><code>$space-ul</code></td>
     <td>Ultra large</td>
-    <td><div class="uqds-space uqds-space-ul"></div></td>
+    <td><div className="uqds-space uqds-space-ul"></div></td>
   </tr>
   <tr>
     <td>80</td>
     <td>5</td>
     <td><code>$space-uul</code></td>
     <td>2x ultra large</td>
-    <td><div class="uqds-space uqds-space-uul"></div></td>
+    <td><div className="uqds-space uqds-space-uul"></div></td>
   </tr>
   <tr>
     <td>88</td>
     <td>5.5</td>
     <td><code>$space-uuul</code></td>
     <td>3x ultra large</td>
-    <td><div class="uqds-space uqds-space-uuul"></div></td>
+    <td><div className="uqds-space uqds-space-uuul"></div></td>
   </tr>
   <tr>
     <td>96</td>
@@ -562,7 +562,7 @@ This chart provides a guide to multiples of 8.
     <td>10</td>
     <td><code>$space-uuuul</code></td>
     <td>4x ultra large</td>
-    <td><div class="uqds-space uqds-space-uuuul"></div></td>
+    <td><div className="uqds-space uqds-space-uuuul"></div></td>
   </tr>
   <tr>
     <td>168</td>
