--- a/packages/storybook-html/src/components/core/colour-apply.story.mdx
+++ b/packages/storybook-html/src/components/core/colour-apply.story.mdx
@@ -2,7 +2,9 @@ import { Meta, Story, Preview } from '@storybook/addon-docs/blocks';
 
 <Meta title="Core/Colour/Applying colour" />
 
-# Principles
+# Applying colour
+
+## Principles
 
 The Design System specifies colour based on the [UQ Brand Guidelines](https://marketing-communication.uq.edu.au/one-brand) in combination with accessibility standards and user interface standards.
 
@@ -14,7 +16,7 @@ Colour should be applied to user interfaces in only two ways:
 Colour should not be added to an interface for the sole purpose of creating visual interest. Standard styles and components will incorporate appropriate colour. When a user interface needs to be more visually engaging to achieve its goals, incorporate photography aligned with the brand guidelines.
 
 
-# Accessibility
+## Accessibility
 
 Use of colour must meet the following requirements:
 
@@ -22,7 +24,7 @@ Use of colour must meet the following requirements:
 -	[colour is not used as the only visual means of conveying information](https://www.w3.org/WAI/WCAG21/Understanding/use-of-color).
 
 
-# UQ Purple and purple gradient
+## UQ Purple and purple gradient
 
 UQ purple should be the only accent colour on a screen. It is already incorporated via the header and footer, typography, icons and other components. Additional use of UQ purple should be thoughtful and sparing. 
 
@@ -59,14 +61,14 @@ The purple gradient is already incorporated in the header, footer and other comp
 </tbody>
 </table>
 
-## Purple gradient large example
+### Purple gradient large example
 
 Note the centre point at 87%.
 
 <div className="uqds-colour__palette uqds-colour__palette--large uqds-purple-gradient "></div>
 
 
-# Text and icons
+## Text and icons
 
 Icons should generally be the same colour as any adjacent text
 
@@ -128,13 +130,12 @@ Icons should generally be the same colour as any adjacent text
       </ul>
     </td>
   </tr>
-
 </tbody>
 </table>
 
 
 
-# Links and buttons
+## Links and buttons
 
   <table className="uqds-table  uqds-table--card uqds-table--colour">
   <tbody className="uqds-table__body">
@@ -169,14 +170,14 @@ Icons should generally be the same colour as any adjacent text
 </tbody>
 </table>
 
-# Backgrounds
+## Backgrounds
 
 Backgrounds are used to differentiate parts of an interface, and to create containers for related content.
 
 See for example: Sections, Cards, Table -- *add links eventually*
 
 
-## Light backgrounds
+### Light backgrounds
 
 These can be used with dark and purple text.
 
@@ -210,7 +211,7 @@ These can be used with dark and purple text.
 </tbody>
 </table>
 
-## Dark backgrounds
+### Dark backgrounds
 
 These can be used with white text.
 
@@ -237,11 +238,11 @@ These can be used with white text.
 </tbody>
 </table>
 
-# Alert and status colours
+## Alert and status colours
 
 These colours can only be used for components which alert a user or display a status. They should only be used with default and white text.
 
-## Light colours
+### Light colours
 
 These can be used as background colours to default text, e.g. alerts.
 
@@ -286,7 +287,7 @@ These can be used as background colours to default text, e.g. alerts.
 </table>
 
 
-## Dark colours 
+### Dark colours 
 
 These can be used on a white background or as background colours to white text, e.g. form validation errors.
 
@@ -330,7 +331,7 @@ These can be used on a white background or as background colours to white text, 
 </tbody>
 </table>
 
-# Borders
+## Borders
 
 <table className="uqds-table  uqds-table--card uqds-table--colour">
 <tbody className="uqds-table__body">
