--- a/packages/storybook-html/src/components/core/colour-base.story.mdx
+++ b/packages/storybook-html/src/components/core/colour-base.story.mdx
@@ -37,14 +37,14 @@ These are the core brand colours for the University of Queensland. Refer to the 
       <td className="uqds-table__item"><div className="uqds-colour__palette uqds-colour--purple"></div></td>
       <td className="uqds-table__item" data-title="Name:">UQ purple</td>
       <td className="uqds-table__item" data-title="Variable:"><code>$uq-purple</code></td>
-      <td className="uqds-table__item" data-title="HEX:">#51247A</td>
+      <td className="uqds-table__item" data-title="HEX:">#51247a</td>
       <td className="uqds-table__item" data-title="Usage:">Purple is UQ’s primary identifying colour</td>
     </tr>
     <tr className="uqds-table__row">
       <td className="uqds-table__item"><div className="uqds-colour__palette uqds-colour--white"></div></td>
       <td className="uqds-table__item" data-title="Name:">UQ white</td>
       <td className="uqds-table__item" data-title="Variable:"><code>$uq-white</code></td>
-      <td className="uqds-table__item" data-title="HEX:">#FFFFFF</td>
+      <td className="uqds-table__item" data-title="HEX:">#ffffff</td>
       <td className="uqds-table__item" data-title="Usage:">Primary UQ Colour</td>
     </tr>
     <tr className="uqds-table__row">
@@ -74,56 +74,56 @@ These secondary colours should always play a supporting role to our primary colo
       <td className="uqds-table__item"><div className="uqds-colour__palette uqds-colour--purple-light"></div></td>
       <td className="uqds-table__item" data-title="Name:">UQ Purple Light</td>
       <td className="uqds-table__item" data-title="Variable:"><code>$uq-purple-light</code></td>
-      <td className="uqds-table__item" data-title="HEX:">#962A8B</td>
+      <td className="uqds-table__item" data-title="HEX:">#962a8b</td>
       <td className="uqds-table__item" data-title="Usage:">Secondary UQ Colour</td>
     </tr>
     <tr className="uqds-table__row">
       <td className="uqds-table__item"><div className="uqds-colour__palette uqds-colour--gold"></div></td>
       <td className="uqds-table__item" data-title="Name:">UQ Gold</td>
       <td className="uqds-table__item" data-title="Variable:"><code>$uq-gold</code></td>
-      <td className="uqds-table__item" data-title="HEX:">#BB9D65</td>
+      <td className="uqds-table__item" data-title="HEX:">#bb9d65</td>
       <td className="uqds-table__item" data-title="Usage:">Secondary UQ Colour</td>
     </tr>
     <tr className="uqds-table__row">
       <td className="uqds-table__item"><div className="uqds-colour__palette uqds-colour--red"></div></td>
       <td className="uqds-table__item" data-title="Name:">UQ Red</td>
       <td className="uqds-table__item" data-title="Variable:"><code>$uq-red</code></td>
-      <td className="uqds-table__item" data-title="HEX:">#E62645</td>
+      <td className="uqds-table__item" data-title="HEX:">#e62645</td>
       <td className="uqds-table__item" data-title="Usage:">Secondary UQ Colour</td>
     </tr>
     <tr className="uqds-table__row">
       <td className="uqds-table__item"><div className="uqds-colour__palette uqds-colour--orange"></div></td>
       <td className="uqds-table__item" data-title="Name:">UQ Orange</td>
       <td className="uqds-table__item" data-title="Variable:"><code>$uq-orange</code></td>
-      <td className="uqds-table__item" data-title="HEX:">#EB602B</td>
+      <td className="uqds-table__item" data-title="HEX:">#eb602e</td>
       <td className="uqds-table__item" data-title="Usage:">Secondary UQ Colour</td>
     </tr>
     <tr className="uqds-table__row">
       <td className="uqds-table__item"><div className="uqds-colour__palette uqds-colour--yellow"></div></td>
       <td className="uqds-table__item" data-title="Name:">UQ Yellow</td>
       <td className="uqds-table__item" data-title="Variable:"><code>$uq-yellow</code></td>
-      <td className="uqds-table__item" data-title="HEX:">#FBB800</td>
+      <td className="uqds-table__item" data-title="HEX:">#fbb800</td>
       <td className="uqds-table__item" data-title="Usage:">Secondary UQ Colour</td>
     </tr>
     <tr className="uqds-table__row">
       <td className="uqds-table__item"><div className="uqds-colour__palette uqds-colour--blue"></div></td>
       <td className="uqds-table__item" data-title="Name:">UQ Blue</td>
       <td className="uqds-table__item" data-title="Variable:"><code>$uq-blue</code></td>
-      <td className="uqds-table__item" data-title="HEX:">#4085C6</td>
+      <td className="uqds-table__item" data-title="HEX:">#4085c6</td>
       <td className="uqds-table__item" data-title="Usage:">Secondary UQ Colour</td>
     </tr>
     <tr className="uqds-table__row">
       <td className="uqds-table__item"><div className="uqds-colour__palette uqds-colour--aqua"></div></td>
       <td className="uqds-table__item" data-title="Name:">UQ Aqua</td>
       <td className="uqds-table__item" data-title="Variable:"><code>$uq-aqua</code></td>
-      <td className="uqds-table__item" data-title="HEX:">#00A2C7</td>
+      <td className="uqds-table__item" data-title="HEX:">#00a2c7</td>
       <td className="uqds-table__item" data-title="Usage:">Secondary UQ Colour</td>
     </tr>
     <tr className="uqds-table__row">
       <td className="uqds-table__item"><div className="uqds-colour__palette uqds-colour--green"></div></td>
       <td className="uqds-table__item" data-title="Name:">UQ Green</td>
       <td className="uqds-table__item" data-title="Variable:"><code>$uq-green</code></td>
-      <td className="uqds-table__item" data-title="HEX:">#2EA836</td>
+      <td className="uqds-table__item" data-title="HEX:">#2ea836</td>
       <td className="uqds-table__item" data-title="Usage:">Secondary UQ Colour</td>
     </tr>
   </tbody>
@@ -145,7 +145,7 @@ Neutral tones can be used as a background colour.
       <td className="uqds-table__item"><div className="uqds-colour__palette uqds-colour--neutral"></div></td>
       <td className="uqds-table__item" data-title="Name:">UQ Neutral</td>
       <td className="uqds-table__item" data-title="Variable:"><code>$uq-neutral</code></td>
-      <td className="uqds-table__item" data-title="HEX:">#D7D1CC</td>
+      <td className="uqds-table__item" data-title="HEX:">#d7d1cc</td>
       <td className="uqds-table__item" data-title="Usage:">Neutral tones</td>
     </tr>
     <tr className="uqds-table__row">
