--- a/packages/storybook-html/src/components/core/colour-apply.story.mdx
+++ b/packages/storybook-html/src/components/core/colour-apply.story.mdx
@@ -43,14 +43,14 @@ The purple gradient is already incorporated in the header, footer and other comp
     <td className="uqds-table__item"><div className="uqds-colour__palette uqds-colour--purple"></div></td>
     <td className="uqds-table__item" data-title="Name:">UQ Purple</td>
     <td className="uqds-table__item" data-title="Variable:"><code>$uq-purple</code></td>
-    <td className="uqds-table__item" data-title="HEX:">#51247A</td>
+    <td className="uqds-table__item" data-title="HEX:">#51247a</td>
     <td className="uqds-table__item" data-title="Usage:">Reflect UQ brand in accents and emphasis</td>
   </tr>
   <tr  className="uqds-table__row">
     <td className="uqds-table__item"><div className="uqds-colour__palette uqds-purple-gradient"></div></td>
     <td className="uqds-table__item" data-title="Name:">Purple Gradient</td>
     <td className="uqds-table__item" data-title="Variable:"><code>$uq-purple-gradient</code></td>
-    <td className="uqds-table__item" data-title="HEX:">#51247A #962A8B</td>
+    <td className="uqds-table__item" data-title="HEX:">#51247a #962a8b</td>
     <td className="uqds-table__item" data-title="Usage:">
     <ul>
       <li>used horizontally, <code>$uq-purple</code> left to <code>$uq-light-purple</code> right</li>
@@ -122,7 +122,7 @@ Icons should generally be the same colour as any adjacent text
     <td className="uqds-table__item"><strong className="uqds-text-color--purple">Purple Text</strong> <div className="uqds-colour__palette uqds-colour--purple"></div></td>
     <td className="uqds-table__item" data-title="Name:">Purple text</td>
     <td className="uqds-table__item" data-title="Variable:"><code>$uq-purple</code></td>
-    <td className="uqds-table__item" data-title="HEX:">#51247A</td>
+    <td className="uqds-table__item" data-title="HEX:">#51247a</td>
     <td className="uqds-table__item" data-title="Usage:">
       <ul>
         <li>Used for content heading</li>
@@ -227,7 +227,7 @@ These can be used with white text.
     <td className="uqds-table__item"><div className="uqds-colour__palette uqds-colour--purple"></div></td>
     <td className="uqds-table__item" data-title="Name:">UQ purple</td>
     <td className="uqds-table__item" data-title="Variable:"><code>$uq-purple</code></td>
-    <td className="uqds-table__item" data-title="HEX:">#</td>
+    <td className="uqds-table__item" data-title="HEX:">#51247a</td>
     <td className="uqds-table__item" data-title="Usage:">
       <ul>
         <li>Section background, when major breaks in topic occur</li>
