storybook-html, body, table: tidy up table work for incl. in forms work

--- a/packages/storybook-html/src/components/form/form.docs.mdx
+++ b/packages/storybook-html/src/components/form/form.docs.mdx
@@ -4,14 +4,14 @@ import StatusBadge from '../../../.storybook/custom/components/StatusBadge';
 # Form
 
 <StatusBadge.Development />
-<StatusBadge.Experimental />
-<StatusBadge.Stable />
-<StatusBadge.Review />
-<StatusBadge.Deprecated />
 
 ## Overview
 
 ## Examples
+
+### Text input
+
+<Story id="components-form--input-text" />
 
 ## When and how to use
 
