storybook-html: apply interim status badges to existing mdx docs

--- a/packages/storybook-html/src/components/breadcrumb/breadcrumb.docs.mdx
+++ b/packages/storybook-html/src/components/breadcrumb/breadcrumb.docs.mdx
@@ -1,14 +1,14 @@
 import { Meta, Story, Canvas } from '@storybook/addon-docs/blocks';
+import StatusBadge from '../../../.storybook/custom/components/StatusBadge';
 
-# Breadcrumb 
+# Breadcrumb
+<StatusBadge.Stable />
 
 ## Overview
 
 Breadcrumbs are horizontally arranged text links separated by an arrow icon (arrow-right.svg). They are typically described using at least their URL and their name, and typically ending with the current page.
 
 The arrow icon indicates the level of that page relative to the page links beside it. It is displayed via background-image data URIs in CSS.
-
-
 
 ## Breadcrumb Levels
 
