--- a/packages/storybook-html/src/components/core/core.story.mdx
+++ b/packages/storybook-html/src/components/core/core.story.mdx
@@ -1,8 +1,10 @@
 import { Meta } from '@storybook/addon-docs/blocks';
+import StatusBadge from '../../../.storybook/custom/components/StatusBadge';
 
 <Meta title="Core/Introduction" />
 
 # Core
+<StatusBadge.Development />
 
 This package provides [Sass](https://sass-lang.com/) variables, mixins, and
 functions. 
