--- a/packages/storybook-html/src/components/page-header/page-header.docs.mdx
+++ b/packages/storybook-html/src/components/page-header/page-header.docs.mdx
@@ -1,8 +1,10 @@
 import { Meta, Story, Canvas } from '@storybook/addon-docs/blocks';
+import StatusBadge from '../../../.storybook/custom/components/StatusBadge';
 
 <Meta title="Components/Page header/All" />
 
 # Page header
+<StatusBadge.Deprecated />
 
 The Page header component is used to display the page title or the breadcrumbs or a combination of both. 
 The default background color is set to light grey to distinguish it from the page contents.
