--- a/packages/storybook-html/src/components/pagination/pagination.story.mdx
+++ b/packages/storybook-html/src/components/pagination/pagination.story.mdx
@@ -1,8 +1,10 @@
 import { Meta, Story, Canvas } from '@storybook/addon-docs/blocks';
+import StatusBadge from '../../../.storybook/custom/components/StatusBadge';
 
 <Meta title="Components/Pagination/Pagination states" />
 
 # Pagination
+<StatusBadge.Review />
 
 Pagination, also known as paging, is the process of dividing a document into discrete pages, either electronic pages or printed pages.
 
