--- a/packages/storybook-html/src/components/body/body-elements.docs.mdx
+++ b/packages/storybook-html/src/components/body/body-elements.docs.mdx
@@ -1,6 +1,8 @@
 import { Meta, Story, Canvas } from '@storybook/addon-docs/blocks';
+import StatusBadge from '../../../.storybook/custom/components/StatusBadge';
 
 # Body elements
+<StatusBadge.Development />
 
 ## Text block
 <Canvas withSource="none">
