--- a/packages/storybook-html/src/components/body/body-utilities.docs.mdx
+++ b/packages/storybook-html/src/components/body/body-utilities.docs.mdx
@@ -1,6 +1,8 @@
 import { Meta, Story, Canvas } from '@storybook/addon-docs/blocks';
+import StatusBadge from '../../../.storybook/custom/components/StatusBadge';
 
 # Body utility classes
+<StatusBadge.Development />
 
 ## Text colour
 <Story id="components-body-utilities--text-color-utils" />
