--- a/packages/storybook-html/src/components/body/body.story.mdx
+++ b/packages/storybook-html/src/components/body/body.story.mdx
@@ -1,8 +1,10 @@
 import { Meta, Story, Canvas } from '@storybook/addon-docs/blocks';
+import StatusBadge from '../../../.storybook/custom/components/StatusBadge';
 
 <Meta title="Components/Body/Body" />
 
 # Body
+<StatusBadge.Development />
 
 The `@uqds/body` package provides basic HTML element style rules and utility
 classes.
