--- a/packages/storybook-html/src/components/grid/grid.docs.mdx
+++ b/packages/storybook-html/src/components/grid/grid.docs.mdx
@@ -1,6 +1,8 @@
 import { Meta, Story } from '@storybook/addon-docs/blocks';
+import StatusBadge from '../../../.storybook/custom/components/StatusBadge';
 
 # Grid
+<StatusBadge.Stable />
 
 Layouts using our grid are achieved using a combination of `.uq-grid` (grid
 container) and `.uq-grid__col` (grid column) elements and their modifiers.
