--- a/packages/storybook-html/src/components/sections/sections.docs.mdx
+++ b/packages/storybook-html/src/components/sections/sections.docs.mdx
@@ -1,6 +1,8 @@
 import { Meta, Story, Canvas } from '@storybook/addon-docs/blocks';
+import StatusBadge from '../../../.storybook/custom/components/StatusBadge';
 
 # Sections
+<StatusBadge.Review />
 
 ## Overview
 
