added jobs link to example source html

--- a/packages/storybook-html/src/components/header/header.docs.mdx
+++ b/packages/storybook-html/src/components/header/header.docs.mdx
@@ -31,7 +31,7 @@ using [*UQ Search*](https://www.uq.edu.au/search).
       </div>
       <nav class="menu-global">
         <ul>
-          <li><a href="https://www.uq.edu.au/contacts/">Contacts</a></li>
+          <li><a href="https://contacts.uq.edu.au/">Contacts</a></li>
           <li><a href="https://future-students.uq.edu.au/">Study</a></li>
           <li><a href="https://maps.uq.edu.au/">Maps</a></li>
           <li><a href="https://www.uq.edu.au/news/">News</a></li>
@@ -67,7 +67,7 @@ using [*UQ Search*](https://www.uq.edu.au/search).
       </form>
       <nav class="menu-global">
         <ul>
-          <li><a href="https://www.uq.edu.au/contacts/">Contacts</a></li>
+          <li><a href="https://contacts.uq.edu.au/">Contacts</a></li>
           <li><a href="https://www.uq.edu.au/news/">News</a></li>
           <li><a href="https://www.library.uq.edu.au/">Library</a></li>
           <li><a href="https://future-students.uq.edu.au/">Study</a></li>
@@ -106,7 +106,7 @@ allow users to choose to search all UQ sites or just the content on your site\*.
       </div>
       <nav class="menu-global">
         <ul>
-          <li><a href="https://www.uq.edu.au/contacts/">Contacts</a></li>
+          <li><a href="https://contacts.uq.edu.au/">Contacts</a></li>
           <li><a href="https://future-students.uq.edu.au/">Study</a></li>
           <li><a href="https://maps.uq.edu.au/">Maps</a></li>
           <li><a href="https://www.uq.edu.au/news/">News</a></li>
@@ -154,7 +154,7 @@ allow users to choose to search all UQ sites or just the content on your site\*.
       </form>
       <nav class="menu-global">
         <ul>
-          <li><a href="https://www.uq.edu.au/contacts/">Contacts</a></li>
+          <li><a href="https://contacts.uq.edu.au/">Contacts</a></li>
           <li><a href="https://www.uq.edu.au/news/">News</a></li>
           <li><a href="https://www.library.uq.edu.au/">Library</a></li>
           <li><a href="https://future-students.uq.edu.au/">Study</a></li>
