--- a/packages/storybook-html/src/components/core/browser-support.story.mdx
+++ b/packages/storybook-html/src/components/core/browser-support.story.mdx
@@ -68,11 +68,11 @@ Analytics identifies the following operating systems as statistically significan
 * iOS
 * Android
 
-Refer to the following section for more detailed information on operating system versions UQ statistics
+Refer to the following section for more detailed information on operating system versions [UQ statistics](#UQ-statistics)
 
 ## Assessing individual site requirements
 
-If a  solution requires significant backward compatibility, there should be discussion with the **ITS ADS UI** team and a review in the context of the application. You can request support from webservices@uq.edu.au.
+If a  solution requires significant backward compatibility, there should be discussion with the **ITS ADS UI** team and a review in the context of the application. You can request support from <webservices@uq.edu.au>.
 
 ### Modifying browser behaviour
 
@@ -111,7 +111,7 @@ For many aspects of browser testing, it is not possible to do an automated check
 
 ### Automated checks
 
-Tools to for browser testing have the ability to setup tests which can be run with little, or no, deliberate human intervention.
+Tools for browser testing have the ability to setup tests which can be run with little, or no, deliberate human intervention.
 
 In most cases the time, resources and device cost to test across multiple combinations of browsers , hardware and operating systems is impractical. Automated tools can be used to practically test more variations. 
 
@@ -143,126 +143,77 @@ Aim to cover as many browser and operating systems as you can. Pages should also
 
 All listed browsers should be tested on at least one operating system or emulation tool. A combination of manual and automated testing can provide better results than either on its own. To achieve broader testing it is highly recommended that an automation tool is used in conjunction with manual testing.
 
-Browser & OS
-	
 
-Windows
-	
-
-Macintosh
-	
-
-iOS
-	
-
-Android
-
-Chrome
-	
-
-TEST
-	
-
-TEST
-	
-
-TEST
-	
-
-TEST
-
-Internet Explorer
-	
-
-TEST
-	
-
-N/A
-	
-
-N/A
-	
-
-N/A
-
-Safari
-	
-
-N/A
-	
-
-TEST
-	
-
-TEST
-	
-
-N/A
-
-Firefox
-	
-
-TEST
-	
-
-TEST
-	
-
-N/A
-	
-
-N/A
-
-Edge
-	
-
-TEST
-	
-
-N/A
-	
-
-N/A
-	
-
-N/A
-
+<table>
+    <caption>Browser & OS</caption>
+    <thead>
+        <tr>
+            <th>Windows</th>
+            <th>Macintosh</th>
+            <th>iOS</th>
+            <th>Android</th>
+        </tr>
+    </thead>
+    <tbody>
+        <tr>
+            <td>Chrome</td>
+            <td>Chrome</td>
+            <td>Chrome</td>
+            <td>Chrome</td>
+        </tr>
+        <tr>
+            <td>Internet Explorer</td>
+            <td>N/A</td>
+            <td>N/A</td>
+            <td>N/A</td>
+        </tr>
+        <tr>
+            <td>N/A</td>
+            <td>Safari</td>
+            <td>Safari</td>
+            <td>N/A</td>
+        </tr>
+        <tr>
+            <td>Firefox</td>
+            <td>Firefox</td>
+            <td>N/A</td>
+            <td>N/A</td>
+        </tr>
+        <tr>
+            <td>Edge</td>
+            <td>N/A</td>
+            <td>N/A</td>
+            <td>N/A</td>
+        </tr>
+    </tbody>
+</table>
 
 Versions of operating systems can also introduce variations in the rendering of code. If resources permit extend testing to combinations of operating system and browsers. 
 
-Browser & OS
-	
-
-Windows 10
-	
-
-Windows 7
-	
-
-Windows 8.1
-	
-
-Windows XP
-
-Chrome
-	
-
-TEST
-	
-
-TEST
-	
-
-TEST
-	
-
-TEST
-
+<table>
+    <caption>Browser & OS Version</caption>
+    <thead>
+        <tr>
+            <th>Windows 10</th>
+            <th>Windows 7</th>
+            <th>Windows 8.1</th>
+            <th>Windows XP</th>
+        </tr>
+    </thead>
+    <tbody>
+        <tr>
+            <td>Chrome</td>
+            <td>Chrome</td>
+            <td>Chrome</td>
+            <td>Chrome</td>
+        </tr>
+    </tbody>
+</table>
 
 ### Small screen devices
 
 
-Testing preference for devices released in the previous 12 months or where significant statistical usage is identified. Where possible test against the most recent browser version. When devices are not easily available Chrome’s Device Mode and Mobile Emulation or virtualization tools like BrowserStack may be substituted. 
+Testing preference for devices released in the previous 12 months or where significant statistical usage is identified. Where possible test against the most recent browser version. When devices are not easily available Chrome’s [Device Mode and Mobile Emulation Browser & OS Version](https://developer.chrome.com/devtools/docs/device-mode) or virtualization tools like BrowserStack may be substituted. 
 
 ### Templates and components 
 
