Remove recommendation section

--- a/packages/storybook-html/templates/component.docs.mdx
+++ b/packages/storybook-html/templates/component.docs.mdx
@@ -104,14 +104,9 @@ import StatusBadge from '../../../.storybook/custom/components/StatusBadge';
 
 ## Additional Info
 
-### Recommendation(s)
-
-<text>
-
-
 ### Related
 
-<text>
+<text> - patterns, gallery, bibliography, etc… 
 
 
 ### Known issue(s)
