--- a/packages/storybook-html/src/components/progression/progression.docs.mdx
+++ b/packages/storybook-html/src/components/progression/progression.docs.mdx
@@ -8,7 +8,7 @@ import StatusBadge from '../../../.storybook/custom/components/StatusBadge';
 
 The Progression component is a progress indicator helping the user to complete a step by step process.
 
-## Instances
+## Base Example
 
 ### Initial instance
 
@@ -29,8 +29,7 @@ In the initial instance the component is in it's starting default stage.
         </div>
         <div class="uq-progression__bar">&nbsp;</div>
     </li>
-    ....
-    ....
+    ...
   </ul>
 ```
 
@@ -68,8 +67,7 @@ An instance when a step is done partly but not completed.
           </ul>
       </div>
     </li>
-    ....
-    ....
+    ...
   </ul>
 ```
 
@@ -136,34 +134,45 @@ The instance when all steps are done and completed.
     </ul>
 ```
 
-## Adding sub steps between steps
+## Use Case(s)
+
+### Adding sub steps between steps
 
 If there are sub steps between the main steps, follow the example html code below where the ul element class progression__sub-step and li child(s) with class progression&#95;&#95;bar is added.
 
 ```html
-<ul class="uq-progression">
-    <li class="uq-progression__step is-complete">
-        <div class="uq-progression__step-marker">
-            <a class="uq-progression__link" href="#">
-                <span class="uq-progression__step-number">1</span>
-                <span class="uq-progression__step-label">Step 1</span>
-            </a>
-        </div>
-        <div class="uq-progression__bar">
-            <ul class="uq-progression__sub-step">
-                <li class="uq-progression__bar is-complete">&nbsp;</li>
-                <li class="uq-progression__bar">&nbsp;</li>
-                ....
-            </ul>
-        </div>
-    </li>
-</ul>
+    <ul class="uq-progression">
+        <li class="uq-progression__step is-complete">
+            <div class="uq-progression__step-marker">
+                <a class="uq-progression__link" href="#">
+                    <span class="uq-progression__step-number">1</span>
+                    <span class="uq-progression__step-label">Step 1</span>
+                </a>
+            </div>
+            <div class="uq-progression__bar">
+                <ul class="uq-progression__sub-step">
+                    <li class="uq-progression__bar is-complete">&nbsp;</li>
+                    <li class="uq-progression__bar">&nbsp;</li>
+                    ...
+                </ul>
+            </div>
+        </li>
+    </ul>
 ```
 
 The html code above will display 2 sub steps as 2 li elements with class progression&#95;&#95;bar is present. The number of sub steps is determined by the number of li class progression&#95;&#95;bar elements within the parent class progression&#95;&#95;bar element.
 
 Note that adding the class is-complete to the child li element denotes that the sub step is done.
 
-## Breakpoints
+### Breakpoints
 
 The progression hides the step marker label at viewports less than 640px.
+
+
+## Accessibility
+
+To be added.
+
+## Analytics
+
+To be added.
