Prev-Next component doc aligned to template doc

--- a/packages/storybook-html/src/components/previous-next/previous-next.docs.mdx
+++ b/packages/storybook-html/src/components/previous-next/previous-next.docs.mdx
@@ -10,9 +10,9 @@ The Previous-Next component is is also a form of pagination.
 It provides previous and next buttons (links) to navigate between pages or between tab contents on the same page. 
 They are aligned to the sides of the page or in some instances to the sides of the tab contents.
 
-## Instances
+## Base Example
 
-### First instance, Default instance
+### Initial instance
 
 An instance when only the next button is visible
 
@@ -53,7 +53,7 @@ An instance when both the previous and next buttons are visible
 </div>
 ```
 
-### Last instance
+### Final instance
 
 An instance when only the previous button is visible
 
@@ -73,6 +73,8 @@ An instance when only the previous button is visible
   </div>
 ```
 
-## Breakpoints
+## Use Case(s)
 
-The previous and next buttons collapses at 640px
+### Breakpoints
+
+The previous and next buttons collapses at 640px.
